--- a/IND8217_PROJECT V2.ipynb
+++ b/IND8217_PROJECT V2.ipynb
@@ -22,7 +22,7 @@
         "from sklearn.naive_bayes import GaussianNB, MultinomialNB\n",
         "from sklearn.dummy import DummyClassifier\n",
         "from sklearn.neural_network import MLPClassifier\n",
-        "from MLSMOTE import mlsmote\n",
+        "import mlsmote\n",
         "from skmultilearn.problem_transform import BinaryRelevance\n",
         "import json\n",
         "import matplotlib.pyplot as plt\n",
