modify main file

--- a/IND8217_PROJECT V2.ipynb
+++ b/IND8217_PROJECT V2.ipynb
@@ -49472,6 +49472,7 @@
         "            'micro_f1': micro_f1,\n",
         "            'jaccard_sim': jaccard_sim,\n",
         "            'precision': precision,\n",
+        "            'accuracy': accuracy,\n",
         "            'recall': recall,\n",
         "            'score': score\n",
         "        })\n",
