--- a/top_10_results.tex
+++ b/top_10_results.tex
@@ -1,16 +1,16 @@
-\begin{tabular}{llrrrrrrr}
+\begin{tabular}{lllllllll}
 \toprule
 classifier & hyperparameters & f1 & hamming_loss & auc & precision & accuracy & recall & score \\
 \midrule
-XGBClassifier & {'max_depth': 5, 'learning_rate': 0.5, 'n_estimators': 50, 'gamma': 0.5, 'subsample': 1.0, 'colsample_bytree': 1.0, 'tree_method': 'gpu_hist', 'gpu_id': 0} & 0.987850 & 0.996500 & 0.881868 & 0.986452 & 0.988500 & 0.989526 & 0.957050 \\
-LGBMClassifier & {'max_depth': 3, 'learning_rate': 0.1, 'n_estimators': 200, 'num_leaves': 31, 'subsample': 0.5, 'colsample_bytree': 0.8, 'reg_lambda': 0.0, 'device': 'gpu', 'gpu_device_id': 0, 'verbose': -1, 'silent': True} & 0.987147 & 0.996333 & 0.881369 & 0.985918 & 0.988500 & 0.988529 & 0.956603 \\
-XGBClassifier & {'max_depth': 7, 'learning_rate': 1.0, 'n_estimators': 50, 'gamma': 0.5, 'subsample': 1.0, 'colsample_bytree': 1.0, 'tree_method': 'gpu_hist', 'gpu_id': 0} & 0.987026 & 0.996250 & 0.881616 & 0.985229 & 0.988000 & 0.989027 & 0.956520 \\
-XGBClassifier & {'max_depth': 7, 'learning_rate': 1.0, 'n_estimators': 50, 'gamma': 0.0, 'subsample': 1.0, 'colsample_bytree': 1.0, 'tree_method': 'gpu_hist', 'gpu_id': 0} & 0.986549 & 0.995917 & 0.881114 & 0.985241 & 0.987000 & 0.988030 & 0.955946 \\
-LGBMClassifier & {'max_depth': 5, 'learning_rate': 0.1, 'n_estimators': 50, 'num_leaves': 31, 'subsample': 0.5, 'colsample_bytree': 0.8, 'reg_lambda': 0.5, 'device': 'gpu', 'gpu_device_id': 0, 'verbose': -1, 'silent': True} & 0.988266 & 0.997083 & 0.874560 & 0.985557 & 0.991000 & 0.991022 & 0.955583 \\
-LGBMClassifier & {'max_depth': 7, 'learning_rate': 1.0, 'n_estimators': 50, 'num_leaves': 127, 'subsample': 1.0, 'colsample_bytree': 0.8, 'reg_lambda': 0.5, 'device': 'gpu', 'gpu_device_id': 0, 'verbose': -1, 'silent': True} & 0.984295 & 0.994000 & 0.886915 & 0.985834 & 0.980000 & 0.983541 & 0.955193 \\
-LGBMClassifier & {'max_depth': 7, 'learning_rate': 0.1, 'n_estimators': 50, 'num_leaves': 62, 'subsample': 0.5, 'colsample_bytree': 0.8, 'reg_lambda': 0.0, 'device': 'gpu', 'gpu_device_id': 0, 'verbose': -1, 'silent': True} & 0.988195 & 0.996750 & 0.874059 & 0.986701 & 0.990000 & 0.990025 & 0.955171 \\
-XGBClassifier & {'max_depth': 9, 'learning_rate': 1.0, 'n_estimators': 50, 'gamma': 0.5, 'subsample': 1.0, 'colsample_bytree': 1.0, 'tree_method': 'gpu_hist', 'gpu_id': 0} & 0.985604 & 0.995417 & 0.880363 & 0.984762 & 0.985500 & 0.986534 & 0.954992 \\
-LGBMClassifier & {'max_depth': 3, 'learning_rate': 0.5, 'n_estimators': 200, 'num_leaves': 127, 'subsample': 0.8, 'colsample_bytree': 0.5, 'reg_lambda': 0.0, 'device': 'gpu', 'gpu_device_id': 0, 'verbose': -1, 'silent': True} & 0.985910 & 0.995250 & 0.879866 & 0.986551 & 0.985500 & 0.985536 & 0.954949 \\
-LGBMClassifier & {'max_depth': 7, 'learning_rate': 0.1, 'n_estimators': 50, 'num_leaves': 31, 'subsample': 0.5, 'colsample_bytree': 1.0, 'reg_lambda': 0.5, 'device': 'gpu', 'gpu_device_id': 0, 'verbose': -1, 'silent': True} & 0.987548 & 0.996750 & 0.874060 & 0.985222 & 0.990000 & 0.990025 & 0.954912 \\
+XGBClassifier & {'max_depth': 5, 'learning_rate': 0.5, 'n_estimators': 50, 'gamma': 0.5, 'subsample': 1.0, 'colsample_bytree': 1.0, 'tree_method': 'gpu_hist', 'gpu_id': 0} & 98.78\% & 99.65\% & 88.19\% & 98.65\% & 98.85\% & 98.95\% & 95.71\% \\
+LGBMClassifier & {'max_depth': 3, 'learning_rate': 0.1, 'n_estimators': 200, 'num_leaves': 31, 'subsample': 0.5, 'colsample_bytree': 0.8, 'reg_lambda': 0.0, 'device': 'gpu', 'gpu_device_id': 0, 'verbose': -1, 'silent': True} & 98.71\% & 99.63\% & 88.14\% & 98.59\% & 98.85\% & 98.85\% & 95.66\% \\
+XGBClassifier & {'max_depth': 7, 'learning_rate': 1.0, 'n_estimators': 50, 'gamma': 0.5, 'subsample': 1.0, 'colsample_bytree': 1.0, 'tree_method': 'gpu_hist', 'gpu_id': 0} & 98.7\% & 99.63\% & 88.16\% & 98.52\% & 98.8\% & 98.9\% & 95.65\% \\
+XGBClassifier & {'max_depth': 7, 'learning_rate': 1.0, 'n_estimators': 50, 'gamma': 0.0, 'subsample': 1.0, 'colsample_bytree': 1.0, 'tree_method': 'gpu_hist', 'gpu_id': 0} & 98.65\% & 99.59\% & 88.11\% & 98.52\% & 98.7\% & 98.8\% & 95.59\% \\
+LGBMClassifier & {'max_depth': 5, 'learning_rate': 0.1, 'n_estimators': 50, 'num_leaves': 31, 'subsample': 0.5, 'colsample_bytree': 0.8, 'reg_lambda': 0.5, 'device': 'gpu', 'gpu_device_id': 0, 'verbose': -1, 'silent': True} & 98.83\% & 99.71\% & 87.46\% & 98.56\% & 99.1\% & 99.1\% & 95.56\% \\
+LGBMClassifier & {'max_depth': 7, 'learning_rate': 0.1, 'n_estimators': 50, 'num_leaves': 62, 'subsample': 0.5, 'colsample_bytree': 0.8, 'reg_lambda': 0.0, 'device': 'gpu', 'gpu_device_id': 0, 'verbose': -1, 'silent': True} & 98.82\% & 99.68\% & 87.41\% & 98.67\% & 99.0\% & 99.0\% & 95.52\% \\
+LGBMClassifier & {'max_depth': 7, 'learning_rate': 1.0, 'n_estimators': 50, 'num_leaves': 127, 'subsample': 1.0, 'colsample_bytree': 0.8, 'reg_lambda': 0.5, 'device': 'gpu', 'gpu_device_id': 0, 'verbose': -1, 'silent': True} & 98.43\% & 99.4\% & 88.69\% & 98.58\% & 98.0\% & 98.35\% & 95.52\% \\
+XGBClassifier & {'max_depth': 9, 'learning_rate': 1.0, 'n_estimators': 50, 'gamma': 0.5, 'subsample': 1.0, 'colsample_bytree': 1.0, 'tree_method': 'gpu_hist', 'gpu_id': 0} & 98.56\% & 99.54\% & 88.04\% & 98.48\% & 98.55\% & 98.65\% & 95.5\% \\
+LGBMClassifier & {'max_depth': 3, 'learning_rate': 0.5, 'n_estimators': 200, 'num_leaves': 127, 'subsample': 0.8, 'colsample_bytree': 0.5, 'reg_lambda': 0.0, 'device': 'gpu', 'gpu_device_id': 0, 'verbose': -1, 'silent': True} & 98.59\% & 99.52\% & 87.99\% & 98.66\% & 98.55\% & 98.55\% & 95.49\% \\
+LGBMClassifier & {'max_depth': 5, 'learning_rate': 1.0, 'n_estimators': 50, 'num_leaves': 31, 'subsample': 1.0, 'colsample_bytree': 0.8, 'reg_lambda': 0.5, 'device': 'gpu', 'gpu_device_id': 0, 'verbose': -1, 'silent': True} & 98.33\% & 99.4\% & 88.62\% & 98.48\% & 98.15\% & 98.2\% & 95.49\% \\
 \bottomrule
 \end{tabular}
