--- a/top_classifiers.tex
+++ b/top_classifiers.tex
@@ -1,16 +1,16 @@
-\begin{tabular}{llrrrrrrr}
+\begin{tabular}{lllllllll}
 \toprule
 classifier & hyperparameters & f1 & hamming_loss & auc & precision & accuracy & recall & score \\
 \midrule
-CatBoostClassifier & {'depth': 5, 'learning_rate': 0.5, 'n_estimators': 200, 'l2_leaf_reg': 0.1, 'task_type': 'GPU', 'verbose': False} & 0.983326 & 0.994833 & 0.862990 & 0.982833 & 0.984000 & 0.984040 & 0.948511 \\
-DecisionTreeClassifier & {'max_depth': 7, 'min_samples_split': 10, 'min_samples_leaf': 1} & 0.983924 & 0.995167 & 0.855924 & 0.981952 & 0.984500 & 0.986035 & 0.946763 \\
-GradientBoostingClassifier & {'n_estimators': 50, 'learning_rate': 0.1, 'max_depth': 7, 'subsample': 1.0} & 0.984478 & 0.994667 & 0.879361 & 0.984509 & 0.982500 & 0.984539 & 0.953566 \\
-KNeighborsClassifier & {'n_neighbors': 3, 'weights': 'distance'} & 0.969941 & 0.991750 & 0.680862 & 0.967994 & 0.975000 & 0.974564 & 0.886410 \\
-LGBMClassifier & {'max_depth': 3, 'learning_rate': 0.1, 'n_estimators': 200, 'num_leaves': 31, 'subsample': 0.5, 'colsample_bytree': 0.8, 'reg_lambda': 0.0, 'device': 'gpu', 'gpu_device_id': 0, 'verbose': -1, 'silent': True} & 0.987147 & 0.996333 & 0.881369 & 0.985918 & 0.988500 & 0.988529 & 0.956603 \\
-LogisticRegression & {'C': 10.0} & 0.980830 & 0.994667 & 0.774550 & 0.979029 & 0.984000 & 0.984539 & 0.920964 \\
-MLPClassifier & {'hidden_layer_sizes': [200, 200], 'activation': 'tanh', 'solver': 'adam', 'alpha': 0.01, 'learning_rate': 'constant'} & 0.985545 & 0.995917 & 0.873046 & 0.984339 & 0.987500 & 0.988030 & 0.953223 \\
-RandomForestClassifier & {'n_estimators': 50, 'max_depth': 7, 'min_samples_split': 5, 'min_samples_leaf': 1} & 0.976926 & 0.994083 & 0.724935 & 0.976136 & 0.981500 & 0.982045 & 0.903959 \\
-SVC & {'kernel': 'rbf', 'C': 10.0, 'gamma': 'scale'} & 0.982254 & 0.995250 & 0.807306 & 0.979475 & 0.985000 & 0.985536 & 0.931619 \\
-XGBClassifier & {'max_depth': 5, 'learning_rate': 0.5, 'n_estimators': 50, 'gamma': 0.5, 'subsample': 1.0, 'colsample_bytree': 1.0, 'tree_method': 'gpu_hist', 'gpu_id': 0} & 0.987850 & 0.996500 & 0.881868 & 0.986452 & 0.988500 & 0.989526 & 0.957050 \\
+XGBClassifier & {'max_depth': 5, 'learning_rate': 0.5, 'n_estimators': 50, 'gamma': 0.5, 'subsample': 1.0, 'colsample_bytree': 1.0, 'tree_method': 'gpu_hist', 'gpu_id': 0} & 98.78\% & 99.65\% & 88.19\% & 98.65\% & 98.85\% & 98.95\% & 95.71\% \\
+LGBMClassifier & {'max_depth': 3, 'learning_rate': 0.1, 'n_estimators': 200, 'num_leaves': 31, 'subsample': 0.5, 'colsample_bytree': 0.8, 'reg_lambda': 0.0, 'device': 'gpu', 'gpu_device_id': 0, 'verbose': -1, 'silent': True} & 98.71\% & 99.63\% & 88.14\% & 98.59\% & 98.85\% & 98.85\% & 95.66\% \\
+GradientBoostingClassifier & {'n_estimators': 50, 'learning_rate': 0.1, 'max_depth': 7, 'subsample': 1.0} & 98.45\% & 99.47\% & 87.94\% & 98.45\% & 98.25\% & 98.45\% & 95.36\% \\
+MLPClassifier & {'hidden_layer_sizes': [200, 200], 'activation': 'tanh', 'solver': 'adam', 'alpha': 0.01, 'learning_rate': 'constant'} & 98.55\% & 99.59\% & 87.3\% & 98.43\% & 98.75\% & 98.8\% & 95.32\% \\
+CatBoostClassifier & {'depth': 5, 'learning_rate': 0.5, 'n_estimators': 200, 'l2_leaf_reg': 0.1, 'task_type': 'GPU', 'verbose': False} & 98.33\% & 99.48\% & 86.3\% & 98.28\% & 98.4\% & 98.4\% & 94.85\% \\
+DecisionTreeClassifier & {'max_depth': 7, 'min_samples_split': 10, 'min_samples_leaf': 1} & 98.39\% & 99.52\% & 85.59\% & 98.2\% & 98.45\% & 98.6\% & 94.68\% \\
+SVC & {'kernel': 'rbf', 'C': 10.0, 'gamma': 'scale'} & 98.23\% & 99.52\% & 80.73\% & 97.95\% & 98.5\% & 98.55\% & 93.16\% \\
+LogisticRegression & {'C': 10.0} & 98.08\% & 99.47\% & 77.46\% & 97.9\% & 98.4\% & 98.45\% & 92.1\% \\
+RandomForestClassifier & {'n_estimators': 50, 'max_depth': 7, 'min_samples_split': 5, 'min_samples_leaf': 1} & 97.69\% & 99.41\% & 72.49\% & 97.61\% & 98.15\% & 98.2\% & 90.4\% \\
+KNeighborsClassifier & {'n_neighbors': 3, 'weights': 'distance'} & 96.99\% & 99.18\% & 68.09\% & 96.8\% & 97.5\% & 97.46\% & 88.64\% \\
 \bottomrule
 \end{tabular}
