--- a/tables.ipynb
+++ b/tables.ipynb
@@ -2,20 +2,20 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 36,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\omara\\AppData\\Local\\Temp\\ipykernel_8044\\3119960056.py:9: SettingWithCopyWarning: \n",
+            "C:\\Users\\omara\\AppData\\Local\\Temp\\ipykernel_8044\\4210232593.py:9: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
             "  df_unique[[\"f1\",\"hamming_loss\",\"auc\",\"precision\",\"accuracy\",\"recall\",\"score\"]]=df_unique[[\"f1\",\"hamming_loss\",\"auc\",\"precision\",\"accuracy\",\"recall\",\"score\"]]*100\n",
-            "C:\\Users\\omara\\AppData\\Local\\Temp\\ipykernel_8044\\3119960056.py:12: SettingWithCopyWarning: \n",
+            "C:\\Users\\omara\\AppData\\Local\\Temp\\ipykernel_8044\\4210232593.py:12: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 37,
       "metadata": {},
       "outputs": [
         {
@@ -242,7 +242,7 @@
               "2210  98.33\\%       99.4\\%  88.62\\%   98.48\\%  98.15\\%   98.2\\%  95.49\\%  "
             ]
           },
-          "execution_count": 32,
+          "execution_count": 37,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -253,7 +253,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 38,
       "metadata": {},
       "outputs": [
         {
@@ -278,6 +278,7 @@
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
               "      <th>classifier</th>\n",
+              "      <th>hyperparameters</th>\n",
               "      <th>f1</th>\n",
               "      <th>hamming_loss</th>\n",
               "      <th>auc</th>\n",
@@ -291,6 +292,7 @@
               "    <tr>\n",
               "      <th>350</th>\n",
               "      <td>XGBClassifier</td>\n",
+              "      <td>{'max_depth': 5, 'learning_rate': 0.5, 'n_esti...</td>\n",
               "      <td>98.78\\%</td>\n",
               "      <td>99.65\\%</td>\n",
               "      <td>88.19\\%</td>\n",
@@ -302,6 +304,7 @@
               "    <tr>\n",
               "      <th>1137</th>\n",
               "      <td>LGBMClassifier</td>\n",
+              "      <td>{'max_depth': 3, 'learning_rate': 0.1, 'n_esti...</td>\n",
               "      <td>98.71\\%</td>\n",
               "      <td>99.63\\%</td>\n",
               "      <td>88.14\\%</td>\n",
@@ -313,6 +316,7 @@
               "    <tr>\n",
               "      <th>3329</th>\n",
               "      <td>GradientBoostingClassifier</td>\n",
+              "      <td>{'n_estimators': 50, 'learning_rate': 0.1, 'ma...</td>\n",
               "      <td>98.45\\%</td>\n",
               "      <td>99.47\\%</td>\n",
               "      <td>87.94\\%</td>\n",
@@ -324,6 +328,7 @@
               "    <tr>\n",
               "      <th>3514</th>\n",
               "      <td>MLPClassifier</td>\n",
+              "      <td>{'hidden_layer_sizes': [200, 200], 'activation...</td>\n",
               "      <td>98.55\\%</td>\n",
               "      <td>99.59\\%</td>\n",
               "      <td>87.3\\%</td>\n",
@@ -335,6 +340,7 @@
               "    <tr>\n",
               "      <th>3202</th>\n",
               "      <td>CatBoostClassifier</td>\n",
+              "      <td>{'depth': 5, 'learning_rate': 0.5, 'n_estimato...</td>\n",
               "      <td>98.33\\%</td>\n",
               "      <td>99.48\\%</td>\n",
               "      <td>86.3\\%</td>\n",
@@ -346,6 +352,7 @@
               "    <tr>\n",
               "      <th>3441</th>\n",
               "      <td>DecisionTreeClassifier</td>\n",
+              "      <td>{'max_depth': 7, 'min_samples_split': 10, 'min...</td>\n",
               "      <td>98.39\\%</td>\n",
               "      <td>99.52\\%</td>\n",
               "      <td>85.59\\%</td>\n",
@@ -357,6 +364,7 @@
               "    <tr>\n",
               "      <th>3409</th>\n",
               "      <td>SVC</td>\n",
+              "      <td>{'kernel': 'rbf', 'C': 10.0, 'gamma': 'scale'}</td>\n",
               "      <td>98.23\\%</td>\n",
               "      <td>99.52\\%</td>\n",
               "      <td>80.73\\%</td>\n",
@@ -368,6 +376,7 @@
               "    <tr>\n",
               "      <th>3404</th>\n",
               "      <td>LogisticRegression</td>\n",
+              "      <td>{'C': 10.0}</td>\n",
               "      <td>98.08\\%</td>\n",
               "      <td>99.47\\%</td>\n",
               "      <td>77.46\\%</td>\n",
@@ -379,6 +388,7 @@
               "    <tr>\n",
               "      <th>3261</th>\n",
               "      <td>RandomForestClassifier</td>\n",
+              "      <td>{'n_estimators': 50, 'max_depth': 7, 'min_samp...</td>\n",
               "      <td>97.69\\%</td>\n",
               "      <td>99.41\\%</td>\n",
               "      <td>72.49\\%</td>\n",
@@ -390,6 +400,7 @@
               "    <tr>\n",
               "      <th>3445</th>\n",
               "      <td>KNeighborsClassifier</td>\n",
+              "      <td>{'n_neighbors': 3, 'weights': 'distance'}</td>\n",
               "      <td>96.99\\%</td>\n",
               "      <td>99.18\\%</td>\n",
               "      <td>68.09\\%</td>\n",
@@ -403,32 +414,44 @@
               "</div>"
             ],
             "text/plain": [
-              "                      classifier       f1 hamming_loss      auc precision  \\\n",
-              "350                XGBClassifier  98.78\\%      99.65\\%  88.19\\%   98.65\\%   \n",
-              "1137              LGBMClassifier  98.71\\%      99.63\\%  88.14\\%   98.59\\%   \n",
-              "3329  GradientBoostingClassifier  98.45\\%      99.47\\%  87.94\\%   98.45\\%   \n",
-              "3514               MLPClassifier  98.55\\%      99.59\\%   87.3\\%   98.43\\%   \n",
-              "3202          CatBoostClassifier  98.33\\%      99.48\\%   86.3\\%   98.28\\%   \n",
-              "3441      DecisionTreeClassifier  98.39\\%      99.52\\%  85.59\\%    98.2\\%   \n",
-              "3409                         SVC  98.23\\%      99.52\\%  80.73\\%   97.95\\%   \n",
-              "3404          LogisticRegression  98.08\\%      99.47\\%  77.46\\%    97.9\\%   \n",
-              "3261      RandomForestClassifier  97.69\\%      99.41\\%  72.49\\%   97.61\\%   \n",
-              "3445        KNeighborsClassifier  96.99\\%      99.18\\%  68.09\\%    96.8\\%   \n",
+              "                      classifier  \\\n",
+              "350                XGBClassifier   \n",
+              "1137              LGBMClassifier   \n",
+              "3329  GradientBoostingClassifier   \n",
+              "3514               MLPClassifier   \n",
+              "3202          CatBoostClassifier   \n",
+              "3441      DecisionTreeClassifier   \n",
+              "3409                         SVC   \n",
+              "3404          LogisticRegression   \n",
+              "3261      RandomForestClassifier   \n",
+              "3445        KNeighborsClassifier   \n",
               "\n",
-              "     accuracy   recall    score  \n",
-              "350   98.85\\%  98.95\\%  95.71\\%  \n",
-              "1137  98.85\\%  98.85\\%  95.66\\%  \n",
-              "3329  98.25\\%  98.45\\%  95.36\\%  \n",
-              "3514  98.75\\%   98.8\\%  95.32\\%  \n",
-              "3202   98.4\\%   98.4\\%  94.85\\%  \n",
-              "3441  98.45\\%   98.6\\%  94.68\\%  \n",
-              "3409   98.5\\%  98.55\\%  93.16\\%  \n",
-              "3404   98.4\\%  98.45\\%   92.1\\%  \n",
-              "3261  98.15\\%   98.2\\%   90.4\\%  \n",
-              "3445   97.5\\%  97.46\\%  88.64\\%  "
+              "                                        hyperparameters       f1 hamming_loss  \\\n",
+              "350   {'max_depth': 5, 'learning_rate': 0.5, 'n_esti...  98.78\\%      99.65\\%   \n",
+              "1137  {'max_depth': 3, 'learning_rate': 0.1, 'n_esti...  98.71\\%      99.63\\%   \n",
+              "3329  {'n_estimators': 50, 'learning_rate': 0.1, 'ma...  98.45\\%      99.47\\%   \n",
+              "3514  {'hidden_layer_sizes': [200, 200], 'activation...  98.55\\%      99.59\\%   \n",
+              "3202  {'depth': 5, 'learning_rate': 0.5, 'n_estimato...  98.33\\%      99.48\\%   \n",
+              "3441  {'max_depth': 7, 'min_samples_split': 10, 'min...  98.39\\%      99.52\\%   \n",
+              "3409     {'kernel': 'rbf', 'C': 10.0, 'gamma': 'scale'}  98.23\\%      99.52\\%   \n",
+              "3404                                        {'C': 10.0}  98.08\\%      99.47\\%   \n",
+              "3261  {'n_estimators': 50, 'max_depth': 7, 'min_samp...  97.69\\%      99.41\\%   \n",
+              "3445          {'n_neighbors': 3, 'weights': 'distance'}  96.99\\%      99.18\\%   \n",
+              "\n",
+              "          auc precision accuracy   recall    score  \n",
+              "350   88.19\\%   98.65\\%  98.85\\%  98.95\\%  95.71\\%  \n",
+              "1137  88.14\\%   98.59\\%  98.85\\%  98.85\\%  95.66\\%  \n",
+              "3329  87.94\\%   98.45\\%  98.25\\%  98.45\\%  95.36\\%  \n",
+              "3514   87.3\\%   98.43\\%  98.75\\%   98.8\\%  95.32\\%  \n",
+              "3202   86.3\\%   98.28\\%   98.4\\%   98.4\\%  94.85\\%  \n",
+              "3441  85.59\\%    98.2\\%  98.45\\%   98.6\\%  94.68\\%  \n",
+              "3409  80.73\\%   97.95\\%   98.5\\%  98.55\\%  93.16\\%  \n",
+              "3404  77.46\\%    97.9\\%   98.4\\%  98.45\\%   92.1\\%  \n",
+              "3261  72.49\\%   97.61\\%  98.15\\%   98.2\\%   90.4\\%  \n",
+              "3445  68.09\\%    96.8\\%   97.5\\%  97.46\\%  88.64\\%  "
             ]
           },
-          "execution_count": 33,
+          "execution_count": 38,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -439,7 +462,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 39,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -448,7 +471,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 40,
       "metadata": {},
       "outputs": [],
       "source": [
