--- a/IND8217_PROJECT V2.ipynb
+++ b/IND8217_PROJECT V2.ipynb
@@ -474,36 +474,17 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Classification Report(10th best model):\n",
-        "              precision    recall  f1-score   support\n",
-        "\n",
-        "         TWF       0.50      0.11      0.18         9\n",
-        "         HDF       1.00      0.91      0.95        22\n",
-        "         PWF       1.00      0.83      0.91        12\n",
-        "         OSF       0.94      0.89      0.91        18\n",
-        "         RNF       0.00      0.00      0.00         4\n",
-        "         Non-failure       0.99      1.00      1.00      1940\n",
-        "         micro avg       0.99      0.99      0.99      2005\n",
-        "         macro avg       0.74      0.62      0.66      2005\n",
-        "         weighted avg       0.99      0.99      0.99      2005\n",
-        "         samples avg       0.99      0.99      0.99      2005"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "# Classification Report(Before MLSMOTE):\n",
+        "# Classification Report of best model (Before MLSMOTE):\n",
         "              precision    recall  f1-score   support\n",
         "\n",
         "         TWF       0.00      0.00      0.00         9\n",
         "         HDF       1.00      0.95      0.98        22\n",
-        "         PWF       0.75      1.00      0.86        12\n",
-        "         OSF       1.00      0.94      0.97        18\n",
+        "         PWF       0.71      0.83      0.77        12\n",
+        "         OSF       1.00      0.89      0.94        18\n",
         "         RNF       0.00      0.00      0.00         4\n",
         "         Non-failure       0.99      1.00      1.00      1940\n",
         "         micro avg       0.99      0.99      0.99      2005\n",
-        "         macro avg       0.62      0.65      0.63      2005\n",
+        "         macro avg       0.62      0.61      0.61      2005\n",
         "         weighted avg       0.98      0.99      0.99      2005\n",
         "         samples avg       0.99      0.99      0.99      2005"
       ]
@@ -512,17 +493,17 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Classification Report(After MLSMOTE):\n",
+        "# Classification Report of best model (After MLSMOTE):\n",
         "              precision    recall  f1-score   support\n",
         "\n",
-        "         TWF       0.33      0.11      0.17         9\n",
+        "         TWF       0.40      0.22      0.29         9\n",
         "         HDF       1.00      0.95      0.98        22\n",
-        "         PWF       0.80      1.00      0.89        12\n",
-        "         OSF       0.94      0.83      0.88        18\n",
+        "         PWF       0.77      0.83      0.80        12\n",
+        "         OSF       0.94      0.89      0.91        18\n",
         "         RNF       0.00      0.00      0.00         4\n",
         "         Non-failure       0.99      1.00      1.00      1940\n",
         "         micro avg       0.99      0.99      0.99      2005\n",
-        "         macro avg       0.68      0.65      0.65      2005\n",
+        "         macro avg       0.68      0.65      0.66      2005\n",
         "         weighted avg       0.99      0.99      0.99      2005\n",
         "         samples avg       0.99      0.99      0.99      2005"
       ]
